--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-name: Capability Scotland's Blog
+name: Capability Scotlands Blog
 markdown: redcarpet
 pygments: true 
-baseurl: '/blog' 
+baseurl: /blog
